Fix text overflows

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,12 @@
 button .material-icons {
   vertical-align: middle;
 }
+
+.text-wrap {
+  word-wrap: break-word;
+}
+
+.text-ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
